Updated some animations

--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -1,7 +1,7 @@
 ﻿tnt-layout {
     display: block;
 
-    tnt-header, tnt-footer, tnt-body, tnt-side-nav {
+    tnt-side-nav {
         transition: 200ms ease-in-out;
     }
 
