--- a/TnTComponents/TabView/TnTTabChild.razor
+++ b/TnTComponents/TabView/TnTTabChild.razor
@@ -1,5 +1,6 @@
 ﻿@using TnTComponents.Core
 @inherits TnTComponentBase
+@namespace TnTComponents
 
 <tnt-tab-child @attributes="AdditionalAttributes" class="@Class" style="@_style" @ref="Element">
     @ChildContent
