--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -3,7 +3,9 @@
 
 <TnTLayout>
     <TnTHeader>
-        <TnTSideNavToggle />
+        <TnTSideNavToggle>
+            @MaterialIcon.Menu.Render()
+        </TnTSideNavToggle>
         <TnTThemeToggle />
         This is my header
     </TnTHeader>
