--- a/TnTComponents/Layout/TnTSideNavToggle.razor
+++ b/TnTComponents/Layout/TnTSideNavToggle.razor
@@ -2,7 +2,8 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<tnt-side-nav-toggle @attributes="AdditionalAttributes" style="@Style" expanded="@Expanded" @ref="Element">
+<tnt-side-nav-toggle @attributes="AdditionalAttributes" class="@Class" style="@Style" expanded="@Expanded" @ref="Element">
+    @ChildContent
 </tnt-side-nav-toggle>
 
 <TnTPageScript Src="./_content/TnTComponents/Layout/TnTSideNavToggle.razor.js" />
