--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -13,6 +13,7 @@
 @import 'TnTComponents/_anchor.scss';
 @import 'TnTComponents/_progress.scss';
 @import 'TnTComponents/_tabview.scss';
+@import 'TnTComponents/_accordion.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
