--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -30,6 +30,12 @@
             <TnTSideNavMenuLink Icon="MaterialIcon.Star" Href="/progress">
                 Progress
             </TnTSideNavMenuLink>
+            <TnTSideNavMenuLink Icon="MaterialIcon.MusicNote" Href="/accordion">
+                Accordion
+            </TnTSideNavMenuLink>
+            <TnTSideNavMenuLink Icon="MaterialIcon.Language" Href="/dialog">
+                Dialog
+            </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
         <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Cached" Disabled="true">
             <TnTSideNavMenuLink Icon="MaterialIcon.AccountBalance" Href="/datagrid">
@@ -76,3 +82,5 @@
         Footer content
     </TnTFooter>
 </TnTLayout>
+
+<TnTDialog @rendermode="InteractiveAuto" />
