--- a/TnTComponents/Buttons/TnTButton.razor
+++ b/TnTComponents/Buttons/TnTButton.razor
@@ -13,4 +13,4 @@
     @ChildContent
 </tnt-button>
 
-<TnTPageScript Src="./_content/TnTComponents/Buttons/TnTButton.razor.js" />
+<TnTPageScript Src="@JsModulePath" />
