--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -8,7 +8,7 @@
             type="@Type.ToHtmlType()"
             disabled="@Disabled"
             autofocus="@AutoFocus"
-            @onclick="OnClick">
+            @onclick="OnClickCallback">
     @Icon.Render()
 </tnt-button>
 
