--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -14,6 +14,7 @@
 @import 'TnTComponents/_progress.scss';
 @import 'TnTComponents/_tabview.scss';
 @import 'TnTComponents/_accordion.scss';
+@import 'TnTComponents/_dialog.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
