--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -23,6 +23,9 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.Warning" Href="/card">
             Card Some really long content that should be cut off or wrapped
         </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="MaterialIcon.Snooze" Href="/snackbar">
+            Snackbar
+        </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Business">
             <TnTSideNavMenuLink Icon="MaterialIcon.Delete" Href="/datagrid">
                 Data Grid
@@ -84,3 +87,4 @@
 </TnTLayout>
 
 <TnTDialog @rendermode="InteractiveAuto" />
+<TnTSnackbar @rendermode="InteractiveAuto" />
