--- a/TnTComponents/Archive/Grid/Infrastructure/TnTDataGridCore.razor
+++ b/TnTComponents/Archive/Grid/Infrastructure/TnTDataGridCore.razor
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.Rendering
+﻿@*@using Microsoft.AspNetCore.Components.Rendering
 @using TnTComponents.Common
 @typeparam TGridItem
 @inherits TnTComponentBase
@@ -49,3 +49,4 @@
 
 <TnTPageScript Src="./_content/TnTComponents/Grid/Infrastructure/TnTDataGridCore.razor.js" />
 <TnTPageScript Src="./_content/TnTComponents/TnTButton.razor.js?class=tnt-sortable" />
+*@
