--- a/TnTComponents/Core/TnTAccordion.razor
+++ b/TnTComponents/Core/TnTAccordion.razor
@@ -1,5 +1,6 @@
 ﻿@using TnTComponents.Core
 @inherits TnTComponentBase
+@namespace TnTComponents
 
 <tnt-accordion @attributes="AdditionalAttributes" style="@Style" @ref="Element">
     <h3 class="@Class" >
