--- a/TnTComponents/Archive/Grid/TnTDataGridRow.razor
+++ b/TnTComponents/Archive/Grid/TnTDataGridRow.razor
@@ -1,4 +1,4 @@
-﻿@using TnTComponents.Common
+﻿@*@using TnTComponents.Common
 @inherits TnTComponentBase
 @typeparam TGridItem
 
@@ -20,3 +20,4 @@
         </td>
     }
 </tr>
+*@
