--- a/TnTComponents/Styles/TnTComponents/_snackbar.scss
+++ b/TnTComponents/Styles/TnTComponents/_snackbar.scss
@@ -8,8 +8,8 @@
         min-height: 4rem;
         margin: 0.25rem 0;
         position: relative;
-        animation: snackbarSlideUp 200ms ease-in-out;
-        padding-bottom: 0;
+        animation: snackbarSlideIn 200ms ease-in-out, snackbarSlideOut 200ms ease-in-out var(--timeout) forwards;
+        padding-bottom: 0.25rem;
 
         &:has( > tnt-button) {
             padding-top: 1rem;
@@ -45,24 +45,48 @@
             margin: 0 0.25rem;
         }
 
-        & > progress {
+        & > div:last-child {
+            height: 0.25rem;
+            margin: 0;
+            padding: 0;
             position: absolute;
-            width: 100%;
-            background-color: inherit;
-            height: 0.5rem;
-            position: relative;
-            overflow-x: hidden;
-            bottom: -0.1rem;
+            bottom: 0;
+            left: 0;
+            animation: snackbarProgress var(--timeout) linear forwards;
         }
     }
 }
 
-@keyframes snackbarSlideUp {
+@keyframes snackbarProgress {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@keyframes snackbarSlideOut {
+    0% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(10rem);
+        opacity: 0;
+    }
+}
+
+@keyframes snackbarSlideIn {
     0% {
         transform: translateX(10rem);
+        opacity: 0;
     }
 
     100% {
         transform: translateX(0%);
+        opacity: 1;
     }
 }
