Fixed theme toggle.

--- a/TnTComponents/Core/TnTThemeToggle.razor
+++ b/TnTComponents/Core/TnTThemeToggle.razor
@@ -5,5 +5,5 @@
     Toggle
 </tnt-theme-toggle>
 
-<TnTPageScript Src="./_content/TnTComponents/Core/TnTThemeToggle.razor.js" />
+<TnTPageScript Src="@JsModulePath" />
 
