--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -17,6 +17,7 @@
 @import 'TnTComponents/_accordion.scss';
 @import 'TnTComponents/_dialog.scss';
 @import 'TnTComponents/_snackbar.scss';
+@import 'TnTComponents/_datagrid.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
