--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -1,61 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Components.QuickGrid
 @using TnTComponents
-@using TnTComponents.Enum
-@using TnTComponents.Events
-@using LiveTest.Client.Data
+@using TnTComponents.Snackbar
 
-
-<TnTQuickGrid Items="@Items" Appearance="DataGridAppearance.Default" Height="500">
-    <PropertyColumn Property="@((item) => item.Column1)" />
-    <PropertyColumn Property="@((item) => item.Column2)" />
-    <PropertyColumn Property="@((item) => item.Column3)" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 4" Format="D6" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 5" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 6" Format="MMMM/dd/yyyy" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 7" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 8" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 9" />
-</TnTQuickGrid>
-
-<TnTQuickGrid Items="@Items" Appearance="DataGridAppearance.Stripped" Height="500">
-    <PropertyColumn Property="@((item) => item.Column1)" />
-    <PropertyColumn Property="@((item) => item.Column2)" />
-    <PropertyColumn Property="@((item) => item.Column3)" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 4" Format="D6" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 5" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 6" Format="MMMM/dd/yyyy" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 7" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 8" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 9" />
-</TnTQuickGrid>
-
-<TnTQuickGrid Items="@Items" Appearance="DataGridAppearance.Compact" Height="500">
-    <PropertyColumn Property="@((item) => item.Column1)" />
-    <PropertyColumn Property="@((item) => item.Column2)" />
-    <PropertyColumn Property="@((item) => item.Column3)" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 4" Format="D6" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 5" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 6" Format="MMMM/dd/yyyy" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 7" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 8" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 9" />
-</TnTQuickGrid>
-
-<TnTQuickGrid Items="@Items" Appearance="DataGridAppearance.Stripped | DataGridAppearance.Compact" Height="500">
-    <PropertyColumn Property="@((item) => item.Column1)" />
-    <PropertyColumn Property="@((item) => item.Column2)" />
-    <PropertyColumn Property="@((item) => item.Column3)" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 4" Format="D6" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 5" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 6" Format="MMMM/dd/yyyy" />
-    <PropertyColumn Property="@((item) => item.Column1)" Sortable="true" Title="Column 7" />
-    <PropertyColumn Property="@((item) => item.Column2)" Sortable="true" Title="Column 8" />
-    <PropertyColumn Property="@((item) => item.Column3)" Sortable="true" Title="Column 9" />
-</TnTQuickGrid>
-
+<TnTDataGrid Items="@Items" TItem="DataGridItem" RowClickedCallback="RowClicked" Appearance="DataGridAppearance.Stripped | DataGridAppearance.Compact">
+    <TnTPropertyColumn Property="@(x => x.Column1)" />
+    <TnTPropertyColumn Property="@(x => x.Column2)" />
+    <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" />
+</TnTDataGrid>
 
 
 @code {
+    [Inject]
+    private TnTSnackbarService _service { get; set; }
+
+
     private IQueryable<DataGridItem>? Items;
     private static object _locker = new();
     private static List<DataGridItem> _items;
@@ -74,8 +32,20 @@
             }
             Items = _items.AsQueryable();
         }
-
         return Task.CompletedTask;
+    }
+
+    private async Task RowClicked(DataGridItem item) {
+        await _service.ShowAsync(item.Column1.ToString());
+    }
+
+    public class DataGridItem {
+
+        public int Column1 { get; set; }
+
+        public string Column2 { get; set; } = default!;
+
+        public DateTime Column3 { get; set; }
     }
 
 
