--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -13,6 +13,7 @@
             top: 0;
             background-color: $tnt-color-surface-container-highest;
             box-shadow: 0px 1px $tnt-color-outline;
+            z-index: 3;
 
             tr {
 
@@ -24,6 +25,30 @@
                     min-width: 1rem;
                     text-align: center;
                     @extend .tnt-title-medium;
+
+
+                    &.tnt-sortable {
+                        cursor: pointer;
+                        transition: 200ms ease-in-out;
+
+                        &:hover {
+                            color: $tnt-color-primary;
+                        }
+                    }
+
+                    &.tnt-sorted-asc, &.tnt-sorted-desc {
+                        color: $tnt-color-secondary;
+
+                        span.tnt-icon {
+                            color: $tnt-color-secondary;
+                            float: right;
+                            transition: 200ms;
+                        }
+                    }
+
+                    &.tnt-sorted-asc span.tnt-icon {
+                        transform: rotateZ(180deg);
+                    }
                 }
             }
         }
@@ -73,6 +98,8 @@
 
     &.tnt-interactive {
         tr:has(td) {
+            transition: 150ms ease-in-out;
+
             &:hover {
                 cursor: pointer;
                 background-color: color-mix(in srgb, $tnt-color-on-surface 25%, transparent);
