Added flex box and renamed class and style

--- a/TnTComponents/Core/TnTAccordion.razor
+++ b/TnTComponents/Core/TnTAccordion.razor
@@ -2,8 +2,8 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<tnt-accordion @attributes="AdditionalAttributes" style="@Style" @ref="Element">
-    <h3 class="@Class" >
+<tnt-accordion @attributes="AdditionalAttributes" style="@CssStyle" @ref="Element">
+    <h3 class="@CssClass" >
         @Title
         @MaterialIcon.ArrowDropDown.Render()
     </h3>
