--- a/TnTComponents/Core/TnTExternalClickHandler.razor
+++ b/TnTComponents/Core/TnTExternalClickHandler.razor
@@ -1,5 +1,5 @@
 ﻿@inherits TnTComponentBase
 
-<div @attributes="AdditionalAttributes" class="@Class" style="@Style" @ref="Element">
+<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
     @ChildContent
 </div>
