--- a/TnTComponents/Core/TnTProgressIndicator.razor
+++ b/TnTComponents/Core/TnTProgressIndicator.razor
@@ -2,7 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 <progress @attributes="AdditionalAttributes"
-          class="@Class"
+          class="@CssClass"
           max="@Max"
           value="@Value"
           style="@GetStyle()">
