--- a/TnTComponents/Layout/TnTSideNav.razor
+++ b/TnTComponents/Layout/TnTSideNav.razor
@@ -3,7 +3,7 @@
 @inherits TnTComponentBase
 
 <CascadingValue Value="this" IsFixed="true">
-    <tnt-side-nav @attributes="AdditionalAttributes" class="@Class" style="@Style" @ref="Element">
+    <tnt-side-nav @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
         @ChildContent
     </tnt-side-nav>
 </CascadingValue>
