--- a/TnTComponents/Layout/TnTSideNavMenuGroup.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuGroup.razor
@@ -3,7 +3,7 @@
 @namespace TnTComponents
 
 
-<tnt-side-nav-menu-group @attributes="AdditionalAttributes" class="@Class" style="@Style">
+<tnt-side-nav-menu-group @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
     <span>
         @Icon?.Render()
         @Title
