--- a/TnTComponents/Layout/TnTSideNavMenuLink.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuLink.razor
@@ -2,7 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<div @attributes="AdditionalAttributes" class="@Class" style="@Style">
+<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
     <TnTNavLink href="@Href" Match="@Match" StartIcon="Icon" Disabled="Disabled" ActiveBackgroundColor="ActiveBackgroundColor" Ripple="Ripple" @onclick:stopPropagation>
         @ChildContent
     </TnTNavLink>
