--- a/TnTComponents/Buttons/TnTButton.razor
+++ b/TnTComponents/Buttons/TnTButton.razor
@@ -3,8 +3,8 @@
 @inherits TnTComponentBase
 
 <tnt-button @attributes="AdditionalAttributes"
-        class="@Class"
-        style="@Style"
+        class="@CssClass"
+        style="@CssStyle"
         name="@Name"
         type="@Type.ToHtmlType()"
         disabled="@Disabled"
