--- a/TnTComponents/Buttons/TnTFabButton.razor
+++ b/TnTComponents/Buttons/TnTFabButton.razor
@@ -2,8 +2,8 @@
 @inherits TnTComponents.Core.TnTComponentBase
 
 <tnt-button @attributes="AdditionalAttributes"
-            class="@Class"
-            style="@Style"
+            class="@CssClass"
+            style="@CssStyle"
             name="@Name"
             type="@Type.ToHtmlType()"
             disabled="@Disabled"
