--- a/TnTComponents/Layout/TnTBody.razor
+++ b/TnTComponents/Layout/TnTBody.razor
@@ -1,6 +1,6 @@
 ﻿@using TnTComponents.Core
 @inherits TnTComponentBase
 @namespace TnTComponents
-<tnt-body @attributes="AdditionalAttributes" class="@Class" style="@Style">
+<tnt-body @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
     @ChildContent
 </tnt-body>
