--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -18,6 +18,7 @@
 @import 'TnTComponents/_dialog.scss';
 @import 'TnTComponents/_snackbar.scss';
 @import 'TnTComponents/_datagrid.scss';
+@import 'Components/_datagrid.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
