--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -54,7 +54,7 @@ button[is=tnt-button] {
 
 tnt-layout:has(tnt-footer) {
     .tnt-fab {
-        bottom: calc(2rem + $tnt-footer-height);
+        bottom: calc(2rem + $tnt-footer-height) !important;
     }
 }
 
